# wp3-color-restoration

./: .gitignore  CMakeLists.txt  ColorTransformation.cpp  ColorTransformation.h  ColorTransformation2D.cpp  ColorTransformation2D.h  CubeTetrahedron.cpp  CubeTetrahedron.h  LabelImage.cpp  LabelImage.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PickedColor.cpp  PickedColor.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  README.md  main.cpp
